--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="area" onmouseenter="move()">
+    <div id="area">
         <div id="box"> Click me </div>
     </div>
 
